--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="javacs-lab12/lib/jsoup-1.8.3.jar"/>
 	<classpathentry kind="lib" path="javacs-lab12/lib/junit-4.12.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="C:/COMP CLASSES/Summer Semester/COMP 5120/postgresql-9.4.1209.jre6.jar"/>
 	<classpathentry kind="output" path="javacs-lab12/bin"/>
 </classpath>
